@startuml

hide circle
skinparam classAttributeIconSize 0


        class UpdateIncomeCommand {

            + UpdateIncomeCommand(String input)
            + void execute(List<Income> incomes, ExpenseList expenseList)
            - {static} void updateStorage(List<Income> incomes, ExpenseList expenseList)
            - Income extractUpdatedIncome(String input, Income existingIncome)
            - {static} String getUpdatedDate(String input, Pattern datePattern, String date)
            - {static} Double getUpdatedAmount(String input, Pattern amtPattern, Double amount)
            - {static} String getUpdatedCategory(String input, Pattern categoryPattern, String category)
        }
        abstract class "{abstract} \n Command" {
            + CommandType commandType
        }




    class Income {
        + String getCategory()
        + Double getAmount()
        + String getDate()
        + Income(String category, Double amount, String date)
    }

    class ExpenseList {}

    class Storage {
        + void saveData(List<Income> incomes, ExpenseList expenseList)
    }

    class DateValidator {
        + static boolean isValidDate(String date)
    }

    class FinanceException {
        + InvalidNumberFormatException(String message)
        + MissingAmountException(String message)
    }


UpdateIncomeCommand --|> "{abstract} \n Command" : extends
UpdateIncomeCommand --> Income : uses
UpdateIncomeCommand --> ExpenseList : uses
UpdateIncomeCommand --> Storage : uses
UpdateIncomeCommand --> DateValidator : uses
UpdateIncomeCommand --> FinanceException: throws

@enduml